feat: a metaobject_reference resolves to the entry it points at
The storefront served a bare UUID. Liquid's rule is that a reference type's
value IS the object, so that is what it carries now — pruned whole when the
entry is not showable, the way a dead menu link is.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>